<resources>
    <string name="app_name">Authentication</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loginWithGoogle">Login With Google\n</string>
    <string name="if_new_user_info">If New User Is Click</string>
</resources>